Migrate citation database from "Mendeley" to "Zotero".

--- a/BIBLIOGRAPHY.bib
+++ b/BIBLIOGRAPHY.bib
@@ -1,7 +1,7 @@
 @misc{Abecassis2011,
+  title        = {OpenCV - Rotation (Deskewing)},
   author       = {Abecassis, Felix},
-  title        = {{OpenCV - Rotation (Deskewing)}},
+  year         = 2011,
   url          = {http://felix.abecassis.me/2011/10/opencv-rotation-deskewing/},
   urldate      = {2018-10-27},
-  year         = 2011,
 }
