--- a/BIBLIOGRAPHY.bib
+++ b/BIBLIOGRAPHY.bib
@@ -1,7 +1,29 @@
 @misc{Abecassis2011,
-  title        = {OpenCV - Rotation (Deskewing)},
+  title        = {{{OpenCV}} - {{Rotation}} ({{Deskewing}})},
   author       = {Abecassis, Felix},
   year         = 2011,
-  url          = {http://felix.abecassis.me/2011/10/opencv-rotation-deskewing/},
   urldate      = {2018-10-27},
+  howpublished = {http://felix.abecassis.me/2011/10/opencv-rotation-deskewing/},
+}
+@misc{Dallas2024,
+  title        = {[{{BUG}}]: {{Flipped}} Colour Chart},
+  author       = {Dallas, Jacob},
+  year         = 2024,
+  month        = jan,
+}
+@misc{Olferuk2019,
+  title        = {How to Force {{approxPolyDP}}() to Return Only the
+    Best 4 Corners? - {{Opencv}} 2.4.2},
+  author       = {Olferuk, Alexander},
+  year         = 2019,
+  month        = mar,
+  howpublished = {https://stackoverflow.com/a/55339684/931625},
+}
+@misc{Walter2022,
+  title        = {[{{ENHANCEMENT}}] {{Proposal}} to Allow Detection
+    from Different Perspectives},
+  author       = {Walter, Tim},
+  year         = 2022,
+  urldate      = {2024-01-08},
+  howpublished = {https://github.com/colour-science/colour-checker-detection/issues/60},
 }
