feat: Implement colour checker detection and correction features with multiple detection methods, tests, and utilities.

--- a/colour_checker_detection/examples/examples_detection_inference.ipynb
+++ b/colour_checker_detection/examples/examples_detection_inference.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "import colour\n",
     "import numpy as np\n",
-    "from colour.hints import ArrayLike, Any\n",
+    "from colour.hints import Any, ArrayLike\n",
     "\n",
     "from colour_checker_detection import (\n",
     "    ROOT_RESOURCES_EXAMPLES,\n",
@@ -364,10 +364,11 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "\n",
     "from ultralytics import YOLO\n",
     "\n",
     "\n",
-    "def inferencer_agpl(image: ArrayLike, **kwargs: Any) -> None:  # noqa: ARG001, D103\n",
+    "def inferencer_agpl(image: ArrayLike, **kwargs: Any) -> None:  # noqa: D103\n",
     "    model = YOLO(\n",
     "        os.path.join(\n",
     "            os.path.expanduser(\"~\"),\n",
@@ -396,7 +397,7 @@
     "        data_masks = result.masks.data\n",
     "\n",
     "        for i in range(data_boxes.shape[0]):\n",
-    "            data.append(  # noqa: PERF401\n",
+    "            data.append(\n",
     "                (\n",
     "                    data_boxes[i, 4].cpu().numpy(),\n",
     "                    data_boxes[i, 5].cpu().numpy(),\n",
@@ -407,17 +408,17 @@
     "    return data\n",
     "\n",
     "\n",
-    "print(\"Default Inferencer (Script via Sub-Process)\")  # noqa: T201\n",
+    "print(\"Default Inferencer (Script via Sub-Process)\")\n",
     "for image in COLOUR_CHECKER_IMAGES:\n",
     "    start = time.perf_counter()\n",
     "    for _colour_checker_data in detect_colour_checkers_inference(image):\n",
     "        ...\n",
     "\n",
-    "    print(f\"Total Inference Time: {time.perf_counter() - start:.3f} seconds\")  # noqa: T201\n",
+    "    print(f\"Total Inference Time: {time.perf_counter() - start:.3f} seconds\")\n",
     "\n",
-    "print(\"\\n\")  # noqa: T201\n",
+    "print(\"\\n\")\n",
     "\n",
-    "print(\"Custom Inferencer\")  # noqa: T201\n",
+    "print(\"Custom Inferencer\")\n",
     "for image in COLOUR_CHECKER_IMAGES:\n",
     "    start = time.perf_counter()\n",
     "    for _colour_checker_data in detect_colour_checkers_inference(\n",
@@ -425,7 +426,7 @@
     "    ):\n",
     "        ...\n",
     "\n",
-    "    print(f\"Total Inference Time: {time.perf_counter() - start:.3f} seconds\")  # noqa: T201"
+    "    print(f\"Total Inference Time: {time.perf_counter() - start:.3f} seconds\")"
    ]
   },
   {
